2007-02-23  Josh Stone  <joshua.i.stone@intel.com>

	PR 4096
	* tapsets.cxx (hrtimer_derived_probe_group::emit_module_decls):
	Adapt the function signature for changes in 2.6.21.
	(hrtimer_derived_probe_group::emit_module_init): Fix the enum name
	for 2.6.21 as well.

2007-02-19  Frank Ch. Eigler  <fche@elastic.org>

	PR 4078 and more, including patch from
	Eugeniy Meshcheryakov <eugen@debian.org>:
	* Makefile.am (AM_CXXFLAGS, AM_CFLAGS): Add -Wextra -Wall -Werror
	consistently.
	* Makefile.in: Regenerated.
	(*): Many minor warning fixes.

2007-02-17  Frank Ch. Eigler  <fche@elastic.org>

	PR 4066.
	* translate.cxx (var::init): Check stat scalar initialization,
	just like is done for arrays.
	(emit_module_exit): Check unlikely but possible null timing stat.

2007-02-15  David Smith  <dsmith@redhat.com>

	PR 3625.
	* tapsets.cxx (dwflpp::print_locals): New function to print all
	the variables/parameters of a function.
	(dwflpp::find_variable_and_frame_base): Calls print_locals() when
	target variable can't be found.
	(dwflpp::print_members): New function to print all the members of
	a union/structure.
	(dwflpp::translate_components) Calls print_members() when
	union/structure member target variable reference can't be found.

2007-02-14  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (emit_module_decls): Assert CONFIG_KPROBES,
	as suggested by Andreas Kostyrka <andreas@kostyrka.org>.

2007-02-12  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_statement): Tolerate null file name string.

2007-02-09  Frank Ch. Eigler  <fche@elastic.org>

	PR 3965
	* configure.ac: Add --enable-prologue option.
	* configure, config.in: Regenerated.
	* session.h (prologue_searching): New field.
	* main.cxx (main): Parse new "-P" option.  Initialize based on
	autoconf flag.
	* stap.1.in, NEWS: Document it.
	* hash.cxx (find_hash): Include it in computation.
	* tapsets.cxx (query_func_info, query_cu): Respect it.

2007-02-06  Frank Ch. Eigler  <fche@elastic.org>
